objects/Test_User__c.object
<CustomObject>
    <fields>
        <fullName>Case_Study__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case Study</label>
        <referenceTo>Case_Study__c</referenceTo>
        <relationshipLabel>test users</relationshipLabel>
        <relationshipName>test_users</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Nickname__c</fullName>
        <label>Nickname</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>email__c</fullName>
        <label>email</label>
        <type>Email</type>
    </fields>
    <label>Test User</label>
    <nameField>
        <label>Test User  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>test users</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>